# vmlang

./: CMakeLists.txt  README.md  specs.txt
assembler/: CMakeLists.txt
assembler/include/: bytecode.hpp  isa_map.hpp  parse.hpp  pattern.hpp  token.hpp
assembler/src/: bytecode.cpp  main.cpp  parse.cpp  pattern.cpp  token.cpp
compiler/: CMakeLists.txt
compiler/src/: main.cpp
example/: factorial.asm
vm/: CMakeLists.txt
vm/include/: ISA.hpp  VirtualMachine.hpp  bytes.hpp  syscall.hpp
vm/src/: VirtualMachine.cpp  main.cpp
